--- a/Project_main/old/freepublish_edit.html
+++ b/Project_main/old/freepublish_edit.html
@@ -7,47 +7,51 @@
     <title>ФРИПАБЛИШ</title>
 </head>
 <body style="margin-left:20px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-    <h1>Креативное издательство - Фрипаблиш</h1> 
-    <h2><em>Новое представление книг прошлого и настоящего</em></h2>
-    <h3>Наши конкуренты:</h3>
-    <p><a href="https://ast.ru/">AST</a>     
-        <a href="https://www.mann-ivanov-ferber.ru/">МИФ</a>     
-        <a href="https://popcornbooks.me/">Popcorn Books</a>
-    </p>
-    <ol style="font-weight: 500; font-size: 14pt;">
-        <p>Жанры книг:<p>
-        <li>Классическая литература</li>
-        <li>Детектив</li>
-        <li>Фэнтези</li>
-        <li>Фантастика</li>
-        <li>Научпоп</li>
-        <li>Любовный роман</li>
-        <li>Триллер</li>
-        <p>и т.д.</p>
-    </ol>
-    <h3>Презентация издательства:</h3>
-    <div class="pred">
-        <img style="height: 350px;" src="imges/publish_design_1.jpg">
-        <img style="height: 350px;" src="imges/publish_design_2.jpg">
-        <img style="height: 350px;" src="imges/publish_design_3.jpg">
-        <img style="height: 350px;" src="imges/publish_design_4.jpg">
-        <img style="height: 350px;" src="imges/publish_design_5.jpg">
-        <img style="height: 350px;" src="imges/publish_design_6.jpg">
-        <img style="height: 350px;" src="imges/publish_design_7.jpg">
-        <img style="height: 350px;" src="imges/publish_design_8.jpg">
-        <img style="height: 350px;" src="imges/publish_design_9.jpg">
-        <img style="height: 350px;" src="imges/publish_design_10.jpg">
-        <img style="height: 350px;" src="imges/publish_design_11.jpg">
-    </div>
-    <div >
-        <p class="cont">Контакты:<br/>
+    <header>
+        <nav>
+            <a href="#ab_us">О нас</a>
+            <a href="#book">Жанры</a>
+            <a href="#cont">Контакты</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Креативное издательство - Фрипаблиш</h1> 
+        <h2><em>Новое представление книг прошлого и настоящего</em></h2>
+        <h3>Наши конкуренты:</h3>
+        <p><a href="https://ast.ru/">AST</a>     
+            <a href="https://www.mann-ivanov-ferber.ru/">МИФ</a>     
+            <a href="https://popcornbooks.me/">Popcorn Books</a>
+        </p>
+        <ol style="font-weight: 500; font-size: 14pt;">
+            <p id="book">Жанры книг:<p>
+            <li>Классическая литература</li>
+            <li>Детектив</li>
+            <li>Фэнтези</li>
+            <li>Фантастика</li>
+            <li>Научпоп</li>
+            <li>Любовный роман</li>
+            <li>Триллер</li>
+            <p>и т.д.</p>
+        </ol>
+        <h3 id="ab_us">Презентация издательства:</h3>
+        <div class="pred">
+            <img style="height: 350px;" src="imges/publish_design_1.jpg">
+            <img style="height: 350px;" src="imges/publish_design_2.jpg">
+            <img style="height: 350px;" src="imges/publish_design_3.jpg">
+            <img style="height: 350px;" src="imges/publish_design_4.jpg">
+            <img style="height: 350px;" src="imges/publish_design_5.jpg">
+            <img style="height: 350px;" src="imges/publish_design_6.jpg">
+            <img style="height: 350px;" src="imges/publish_design_7.jpg">
+            <img style="height: 350px;" src="imges/publish_design_8.jpg">
+            <img style="height: 350px;" src="imges/publish_design_9.jpg">
+            <img style="height: 350px;" src="imges/publish_design_10.jpg">
+            <img style="height: 350px;" src="imges/publish_design_11.jpg">
+        </div>
+    </main>
+    <footer>
+        <p id="cont">Контакты:<br/>
         @juli_galk <br/>
         <a href="mailto:galkinaju21@yandex.ru"> e-mail: galkinaju21@yandex.ru</a></p>
-    </div>
-    <p>Предлагаю посмотреть школьный выпуск новостей с крутым клипом и песней внутри</p>
-    <iframe width="560" height="315" 
-    src="https://www.youtube.com/embed/txNE81ipZls?si=xsR_qQVDL0MokUCS&amp;start=252" 
-    title="YouTube video player" frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </footer>
 </body>
 </html>
