--- a/Cource/Lesson 5/Card/card.html
+++ b/Cource/Lesson 5/Card/card.html
@@ -22,16 +22,51 @@
             <div>
                 <h1>Julana Galkina</h1>
                 <p><span>About me:</span><br/> I've been designing for three years, creating a brandbook and a logbook.<br/> I conduct commercial filming and content for companies.r</p>
-                <p><span>About me:</span><br/>&diams; travel in Russia <br/> &diams; reading <br/> &diams; cooking</p>
+                <p><span>Hobbies:</span><br/>&diams; travel in Russia <br/> &diams; reading <br/> &diams; cooking</p>
             </div>
             <img src="avatar.jpg">
         </section>
         <section id="ex">
             <h2>Examples of cases</h2>
+            <div class="case">
+                <h5>Creative publishing house "Freeplish"</h5>
+                <div class="img_src">
+                    <img src="img_publish/publish_design_1.jpg">
+                    <img src="img_publish/publish_design_5.jpg">
+                    <img src="img_publish/publish_design_8.jpg">
+                    <img src="img_publish/publish_design_11.jpg">
+                </div>
+            </div>
+            <br/>
+            <div class="case">
+                <h5>Youth Chamber of the Pavlovsky district</h5>
+                <div class="img_src">
+                    <img src="img_MPO/Дизайн МПО.jpg">
+                    <img src="img_MPO/Дизайн МПО (1).jpg">
+                    <img src="img_MPO/Дизайн МПО (2).jpg">
+                    <!--<img src="img_MPO/Дизайн МПО (3).jpg">-->
+                </div>
+            </div>
+            <br/>
+            <div class="case">
+                <h5>Professional Photography</h5>
+                <div class="img_src_p">
+                    <img src="photo/JG-121.jpg">
+                    <img src="photo/JG-256.jpg">
+                    <img src="photo/JG-278.jpg">
+                    <img src="photo/JG-65.jpg">
+                </div>
+            </div>
         </section>
+        <br/>
         <section id="contacts">
-            
+            <p>phone number: <a href="tel:+79632320525" style="text-decoration: none; color:black">+79632320525</a></p>
+            <p>email: <a href="mailto:galkinaju21@yandex.ru" style="text-decoration: none; color:black">galkinaju21@yandex.ru</a></p>
+            <p>telegram: <a href="https://t.me/juli_galk" style="text-decoration: none; color:black">@juli_galk</a></p>
         </section>
     </main>
+    <footer>
+        <p>	&copy;JUGG</p>
+    </footer>
 </body>
 </html>
