--- a/Cource/Lesson 5/Card/card.html
+++ b/Cource/Lesson 5/Card/card.html
@@ -21,7 +21,7 @@
         <section id="about">
             <div>
                 <h1>Julana Galkina</h1>
-                <p><span>About me:</span><br/> I've been designing for three years, creating a brandbook and a logbook.<br/> I conduct commercial filming and content for companies.r</p>
+                <p><span>About me:</span><br/> I've been designing for three years, creating a brandbook and a logbook.<br/> I conduct commercial filming and content for companies.</p>
                 <p><span>Hobbies:</span><br/>&diams; travel in Russia <br/> &diams; reading <br/> &diams; cooking</p>
             </div>
             <img src="avatar.jpg">
