--- a/Cource/Lesson 5/Card/card.html
+++ b/Cource/Lesson 5/Card/card.html
@@ -60,9 +60,9 @@
         </section>
         <br/>
         <section id="contacts">
-            <p>phone number: <a href="tel:+79632320525" style="text-decoration: none; color:black">+79632320525</a></p>
-            <p>email: <a href="mailto:galkinaju21@yandex.ru" style="text-decoration: none; color:black">galkinaju21@yandex.ru</a></p>
-            <p>telegram: <a href="https://t.me/juli_galk" style="text-decoration: none; color:black">@juli_galk</a></p>
+            <p>phone number: <a href="tel:+79632320525" style="text-decoration: none; color:black" target="_blank">+79632320525</a></p>
+            <p>email: <a href="mailto:galkinaju21@yandex.ru" style="text-decoration: none; color:black" target="_blank">galkinaju21@yandex.ru</a></p>
+            <p>telegram: <a href="https://t.me/juli_galk" style="text-decoration: none; color:black" target="_blank">@juli_galk</a></p>
         </section>
     </main>
     <footer>
