--- a/Cource/Lesson 9/SmartAgro.html
+++ b/Cource/Lesson 9/SmartAgro.html
@@ -11,14 +11,48 @@
 <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="cover">
+  <header>
+    <img src="images/Logo.svg" width="197.46">
+    <nav>
+      <div style="width:auto; height:53px; display:inline">
+        <a href="#cover">Home</a>
+        <div id="undl"></div>
+      </div>
+      <div style="width:auto; height:53px; display:inline">
+        <a href="#cover">About Us</a>
+        <div id="undl"></div>
+      </div>
+      <div style="width:auto; height:53px; display:inline">
+        <a href="#food">Our Products</a>
+        <div id="undl"></div>
+      </div>
+      <div style="width:auto; height:53px; display:inline">
+        <a href="#projects">Projects</a>
+        <div id="undl"></div>
+      </div>
+      <div style="width:auto; height:53px; display:inline">
+        <a href="#">Services</a>
+        <div id="undl"></div>
+      </div>
+      <div style="width:auto; height:53px; display:inline">
+        <a href="#">Services</a>
+        <div id="undl"></div>
+      </div>
+      <div style="width:auto; height:53px; display:inline">
+        <a href="#">Contact Us</a>
+        <div id="undl"></div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="cover" id="cover">
         <p >Original & Natural</p>
         <img src="images/naming.png">
         <h2>Good production</h2>
         <p class="dis">Dissuade ecstatic and properly saw entirely sir why laughter endeavor. In on my jointure horrible margaret suitable he speedily.</p>
         <button>Discover More</button>
     </section>
-    <section class="food">
+    <section class="food" id="food">
         <h3>Popular Foods And Vegetables</h3>
         <h2>Quality Fruits & Vegetables</h2>
         <div class="food_img">
@@ -242,7 +276,7 @@
     <section class="mini-cover">
         <h2>Agriculture Matters to the Future of Bangladesh</h2>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
         <p>RECENTLY COMPLETED WORK</p>
         <h2>Explore Our Projects</h2>
         <div class="cards">
@@ -282,5 +316,17 @@
             <div class="circle"></div>
         </div>
     </section>
+  </main>
+  <footer>
+    <p>Copyright©Smart Agro. All Right Reserved</p>
+    <div class="mail">
+      <input class="input" type="text" placeholder="Enter your mail here...">
+      <button style="width: 45px;height: 45px;">GO</button>
+    </div>
+    <div class="info">
+      <p>Terms & Conditions</p>
+      <p>Privacy Policy</p>
+    </div>
+  </footer>
 </body>
 </html>
