--- a/Cource/Lesson 9/SmartAgro.html
+++ b/Cource/Lesson 9/SmartAgro.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Agro - An Organic Food, Agriculture & Farm</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -46,9 +47,9 @@
   </header>
   <main>
     <section class="cover" id="cover">
-        <p >Original & Natural</p>
+        <p class="or">Original & Natural</p>
         <img src="images/naming.png">
-        <h2>Good production</h2>
+        <br/><h2>Good production</h2>
         <p class="dis">Dissuade ecstatic and properly saw entirely sir why laughter endeavor. In on my jointure horrible margaret suitable he speedily.</p>
         <button>Discover More</button>
     </section>
